<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">


        <TextView
            android:id="@+id/fullname_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name_heading"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/fullname_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:background="@drawable/rectangle_shape"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/email_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_heading"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/rectangle_shape"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/phone_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_heading"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/phone_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:background="@drawable/rectangle_shape"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/feedback_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_heading"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/feedback_edittext"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:gravity="start|top"
            android:hint="@string/feedback_hint"
            android:importantForAutofill="no"
            android:background="@drawable/rectangle_shape"
            android:inputType="textMultiLine" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_feedback_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:background="@drawable/buttons_styles"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:onClick="addFeedback"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_feedbacks_btn"
            android:textColor="@android:color/white"
            android:background="@drawable/buttons_styles"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:onClick="seeFeedback"
            />
    </LinearLayout>

</ScrollView>
